--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 role="tab"
                 aria-controls="arkiveringsversion"
                 href="#"
-                >Arkiveringsvers.</a
+                >Arkiveringsversion</a
               >
             </li>
             <li class="nav-item">
