--- a/magasinenhed.html
+++ b/magasinenhed.html
@@ -63,17 +63,14 @@
         <div class="col-10 col-centered">
           <div class="card bg-white pt-3 pr-4 pl-4 pb-5">
             <div class="card-body">
-              <a href="/search/search-heuristiskenhed.html" class="d-flex mb-4"
-                >« Tilbage til søgning</a
+              <a href="/index.html#magasinenhed" class="d-flex mb-4"
+                >« Tilbage</a
               >
               <span class="badge badge-danger badge-pill mt-2 mb-4"
                 >Magasinenhed</span
               >
+              <p class="mb-0 text-secondary"><strong>Stregkode</strong></p>
               <h1 class="font-weight-bold">802367816</h1>
-              <h3 class="text-secondary mb-5">
-                Indenrigsministeriet, 1950 - 1975
-              </h3>
-
               <div class="container-fluid">
                 <div class="row mb-3 mt-3">
                   <div class="card fixed w-100 mb-10">
@@ -84,7 +81,7 @@
                         Beskrivelse
                       </h5>
                       <button class="btn btn-primary float-right readonly edit">
-                        Rediger
+                        Rediger i AIDA
                       </button>
                       <div class="float-right write">
                         <button class="btn write save">
@@ -143,29 +140,7 @@
                             <li class="list-group-item">
                               <div class="row d-flex align-items-center">
                                 <div class="col-sm-6 font-weight-semibold">
-                                  Undertype
-                                </div>
-                                <div class="col-sm-6 readonly">Type2</div>
-                                <div class="col-sm-6 write">
-                                  <div class="form-group mb-0">
-                                    <select
-                                      class="form-control"
-                                      id="exampleFormControlSelect1"
-                                    >
-                                      <option>Type2</option>
-                                      <option>2</option>
-                                      <option>3</option>
-                                      <option>4</option>
-                                      <option>5</option>
-                                    </select>
-                                  </div>
-                                </div>
-                              </div>
-                            </li>
-                            <li class="list-group-item">
-                              <div class="row d-flex align-items-center">
-                                <div class="col-sm-6 font-weight-semibold">
-                                  Kladde
+                                  Konserver
                                 </div>
                                 <div class="col-sm-6 readonly">Ja</div>
                                 <div class="col-sm-6 write">
@@ -208,21 +183,42 @@
                             <li class="list-group-item">
                               <div class="row d-flex align-items-center">
                                 <div class="col-sm-6 font-weight-semibold">
-                                  Beskrivelsesniveau
+                                  Uorden
                                 </div>
-                                <div class="col-sm-6 readonly">2. niveau</div>
+                                <div class="col-sm-6 readonly">Ja</div>
                                 <div class="col-sm-6 write">
-                                  <div class="form-group mb-0">
-                                    <select
-                                      class="form-control"
-                                      id="exampleFormControlSelect1"
+                                  <div
+                                    class="form-check form-check-inline mr-3"
+                                  >
+                                    <input
+                                      class="form-check-input"
+                                      type="radio"
+                                      name="exampleRadios"
+                                      id="exampleRadios1"
+                                      value="option1"
+                                      checked
+                                    />
+                                    <label
+                                      class="form-check-label"
+                                      for="exampleRadios1"
                                     >
-                                      <option>2. niveau</option>
-                                      <option>2</option>
-                                      <option>3</option>
-                                      <option>4</option>
-                                      <option>5</option>
-                                    </select>
+                                      Ja
+                                    </label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                    <input
+                                      class="form-check-input"
+                                      type="radio"
+                                      name="exampleRadios"
+                                      id="exampleRadios2"
+                                      value="option2"
+                                    />
+                                    <label
+                                      class="form-check-label"
+                                      for="exampleRadios2"
+                                    >
+                                      Nej
+                                    </label>
                                   </div>
                                 </div>
                               </div>
@@ -230,16 +226,42 @@
                             <li class="list-group-item">
                               <div class="row d-flex align-items-center">
                                 <div class="col-sm-6 font-weight-semibold">
-                                  Sorteringsfelt
+                                  ENB
                                 </div>
-                                <div class="col-sm-6 readonly">Sh29123</div>
+                                <div class="col-sm-6 readonly">Ja</div>
                                 <div class="col-sm-6 write">
-                                  <div class="form-group mb-0">
+                                  <div
+                                    class="form-check form-check-inline mr-3"
+                                  >
                                     <input
-                                      type="text"
-                                      class="form-control"
-                                      value="Sh29123"
+                                      class="form-check-input"
+                                      type="radio"
+                                      name="exampleRadios"
+                                      id="exampleRadios1"
+                                      value="option1"
+                                      checked
                                     />
+                                    <label
+                                      class="form-check-label"
+                                      for="exampleRadios1"
+                                    >
+                                      Ja
+                                    </label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                    <input
+                                      class="form-check-input"
+                                      type="radio"
+                                      name="exampleRadios"
+                                      id="exampleRadios2"
+                                      value="option2"
+                                    />
+                                    <label
+                                      class="form-check-label"
+                                      for="exampleRadios2"
+                                    >
+                                      Nej
+                                    </label>
                                   </div>
                                 </div>
                               </div>
@@ -247,18 +269,85 @@
                             <li class="list-group-item">
                               <div class="row d-flex align-items-center">
                                 <div class="col-sm-6 font-weight-semibold">
-                                  E-nr.
+                                  Kasseret
                                 </div>
-                                <div class="col-sm-6 readonly">
-                                  2149xiu12oi3u
-                                </div>
+                                <div class="col-sm-6 readonly">Ja</div>
                                 <div class="col-sm-6 write">
-                                  <div class="form-group mb-0">
+                                  <div
+                                    class="form-check form-check-inline mr-3"
+                                  >
                                     <input
-                                      type="text"
-                                      class="form-control"
-                                      value="2149xiu12oi3u"
+                                      class="form-check-input"
+                                      type="radio"
+                                      name="exampleRadios"
+                                      id="exampleRadios1"
+                                      value="option1"
+                                      checked
                                     />
+                                    <label
+                                      class="form-check-label"
+                                      for="exampleRadios1"
+                                    >
+                                      Ja
+                                    </label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                    <input
+                                      class="form-check-input"
+                                      type="radio"
+                                      name="exampleRadios"
+                                      id="exampleRadios2"
+                                      value="option2"
+                                    />
+                                    <label
+                                      class="form-check-label"
+                                      for="exampleRadios2"
+                                    >
+                                      Nej
+                                    </label>
+                                  </div>
+                                </div>
+                              </div>
+                            </li>
+                            <li class="list-group-item">
+                              <div class="row d-flex align-items-center">
+                                <div class="col-sm-6 font-weight-semibold">
+                                  Må IKKE udlånes
+                                </div>
+                                <div class="col-sm-6 readonly">Ja</div>
+                                <div class="col-sm-6 write">
+                                  <div
+                                    class="form-check form-check-inline mr-3"
+                                  >
+                                    <input
+                                      class="form-check-input"
+                                      type="radio"
+                                      name="exampleRadios"
+                                      id="exampleRadios1"
+                                      value="option1"
+                                      checked
+                                    />
+                                    <label
+                                      class="form-check-label"
+                                      for="exampleRadios1"
+                                    >
+                                      Ja
+                                    </label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                    <input
+                                      class="form-check-input"
+                                      type="radio"
+                                      name="exampleRadios"
+                                      id="exampleRadios2"
+                                      value="option2"
+                                    />
+                                    <label
+                                      class="form-check-label"
+                                      for="exampleRadios2"
+                                    >
+                                      Nej
+                                    </label>
                                   </div>
                                 </div>
                               </div>
@@ -285,7 +374,7 @@
                                     d="M13 2H1v2h12V2zM0 4a1 1 0 0 0 1 1v9a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H1a1 1 0 0 0-1 1v2zm2 1h10v9H2V5zm2 3h6V7H4v1z"
                                   />
                                 </svg>
-                                <span class="ml-3">HE-Navne</span>
+                                <span class="ml-3">Etiketteoplysninger</span>
                               </div>
                             </h4>
                             <button
@@ -442,7 +531,7 @@
                                     d="M8 8h3v2H7c-.55 0-1-.45-1-1V4h2v4zM7 2.3c3.14 0 5.7 2.56 5.7 5.7s-2.56 5.7-5.7 5.7A5.71 5.71 0 0 1 1.3 8c0-3.14 2.56-5.7 5.7-5.7zM7 1C3.14 1 0 4.14 0 8s3.14 7 7 7 7-3.14 7-7-3.14-7-7-7z"
                                   />
                                 </svg>
-                                <span class="ml-3">Tider</span>
+                                <span class="ml-3">Eksemplarer</span>
                               </div>
                             </h4>
                             <button
