--- a/search/search-eksemplar.html
+++ b/search/search-eksemplar.html
@@ -16,13 +16,13 @@
     <div class="container-fluid">
       <div class="col-sm-10 col-centered">
         <nav class="navbar navbar-expand-lg navbar-white">
-          <a class="navbar-brand" href="/index.html">
+          <a class="navbar-brand" href="../index.html">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="191"
               height="49"
               viewBox="0 0 191 49"
-              class="mt-1 ml-2 mr-3 mb-2"
+              class="mt-1 ml-2 mr-3"
             >
               <g fill="#1A2229" fill-rule="evenodd">
                 <path
@@ -59,21 +59,25 @@
     </div>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-10 mt-5 col-centered">
+        <div class="col-10 mt-3 col-centered">
           <ul class="nav nav-tabs">
             <li class="nav-item">
-              <a class="nav-link" href="../index.html#arkivskaber"
+              <a class="nav-link text-muted" href="../index.html#arkivskaber"
                 >Arkivskaber</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../index.html#heuristiskenhed"
+              <a
+                class="nav-link text-muted"
+                href="../index.html#heuristiskenhed"
                 >Heuristisk enhed</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../index.html#arkiveringsversion"
-                >Arkiveringsvers.</a
+              <a
+                class="nav-link text-muted"
+                href="../index.html#arkiveringsversion"
+                >Arkiveringsversion</a
               >
             </li>
             <li class="nav-item">
@@ -82,12 +86,12 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/index.html#magasinenhed"
+              <a class="nav-link text-muted" href="/index.html#magasinenhed"
                 >Magasinenhed</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../index.html#arbejdsopgave"
+              <a class="nav-link text-muted" href="../index.html#arbejdsopgave"
                 >Arbejdsopgave</a
               >
             </li>
@@ -194,7 +198,10 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr class="clickable-row" data-href="../arkivskaber.html">
+                    <tr
+                      class="clickable-row"
+                      data-href="../heuristiskenhed.html"
+                    >
                       <td>
                         FRB Politi
                       </td>
@@ -206,7 +213,10 @@
                       <td>Papir</td>
                       <td>sh1284</td>
                     </tr>
-                    <tr class="clickable-row" data-href="../arkivskaber.html">
+                    <tr
+                      class="clickable-row"
+                      data-href="../heuristiskenhed.html"
+                    >
                       <td>
                         FRB Politi
                       </td>
@@ -218,7 +228,10 @@
                       <td>Papir</td>
                       <td>sh1284</td>
                     </tr>
-                    <tr class="clickable-row" data-href="../arkivskaber.html">
+                    <tr
+                      class="clickable-row"
+                      data-href="../heuristiskenhed.html"
+                    >
                       <td>
                         FRB Politi
                       </td>
@@ -230,7 +243,10 @@
                       <td>Papir</td>
                       <td>sh1284</td>
                     </tr>
-                    <tr class="clickable-row" data-href="../arkivskaber.html">
+                    <tr
+                      class="clickable-row"
+                      data-href="../heuristiskenhed.html"
+                    >
                       <td>
                         FRB Politi
                       </td>
