--- a/search/search-heuristiskenhed.html
+++ b/search/search-heuristiskenhed.html
@@ -73,7 +73,7 @@
               <a
                 class="nav-link text-muted"
                 href="../index.html#arkiveringsversion"
-                >Arkiveringsvers.</a
+                >Arkiveringsversion</a
               >
             </li>
             <li class="nav-item">
